bottom nav complete

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
 
 .pageBody {
     position: relative;
-    padding-bottom: 48px;
+    // padding-bottom: 48px;
 
     .searchBar {
         width: 100%;
