--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,15 +1,28 @@
 @import "../../variables.scss";
+.footerLinks {
+    display: flex;
+    border-top: solid 1px rgba(255, 255, 255, 1);
+    padding: $base-spacing 0;
+    justify-content: space-between;
+    width: 100%;
 
+    // justify-content: space-between;
+
+    .footerCol {
+        // width: 50%;
+    }
+}
 .footer {
     background-color: black;
     bottom: 0;
     color: white;
-    padding: 0.5*$base-spacing $base-spacing*2;
+    padding: 0 $base-spacing*2;
     position: absolute;
     width: 100%;
 
     p {
         font-size: 12px;
+        line-height: 25px;
         display: block;
     }
 
@@ -17,12 +30,15 @@
         align-items: center;
         display: flex;
         justify-content: space-between;
-
-
+        padding: $base-spacing 0;
 
         .gcnLogo {
             height: 40px;
             width: 100px;
+        }
+
+        .socialMediaIcons {
+            display: flex;
         }
     }
     .footerBot {
@@ -39,6 +55,10 @@
                 // width: 50%;
             }
         }
+    }
+
+    .bottomText {
+        display: flex;
     }
 
     .flexRow {
