--- a/src/containers/Navbar/NavTransition.module.scss
+++ b/src/containers/Navbar/NavTransition.module.scss
@@ -13,7 +13,7 @@
 }
 
 .enterDone {
-    border-top: solid 1px rgba(255,255,255,0.3);
+    // border-top: solid 1px rgba(255,255,255,0.3);
 }
 
 .exit {
