--- a/src/containers/Routes/RouteAnim.module.scss
+++ b/src/containers/Routes/RouteAnim.module.scss
@@ -1,3 +1,5 @@
+@import "../../variables.scss";
+
 .enter {
     opacity: 0;
     z-index: 1;
@@ -5,7 +7,7 @@
   
 .enterActive {
   opacity: 1;
-  transition: all 500ms;
+  transition: $transition-speed;
 }
 
 .exit {
@@ -14,5 +16,5 @@
 
 .exitActive {
   opacity: 0;
-  transition: all 500ms;
+  transition: $transition-speed;
 }
